--- a/brands/alysonoldoini.html
+++ b/brands/alysonoldoini.html
@@ -39,21 +39,21 @@
             <div class="row">
               <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
                 <div class="picture">
-                  <img src="../img/alysonoldoini/ambra_guiac.jpg" />
+                  <img src="../img/alysonoldoini/black_violet.jpg" />
                 </div>
               </div>
               <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
                 <div class="discription">
-                  <h4>Alysonoldoini Ambra Guaiac</h4>
+                  <h4>Alysonoldoini Black Violet</h4>
                   <p>
-                    у поєднанні з вишуканим запахом — це мистецтво зв’язувати культури за допомогою ароматів.
+                    Black Violet від ALYSONOLDOINI - це парфум для жінок, належить до групи ароматів Квіткові. Black Violet був випущений в 2013. 
                   </p>
-                  <p>Парфумер: </p>
-                  <p>Верхні ноти: ат</p>
-                  <p>Cередні ноти: Ч
+                  <p>Парфумер: Benoist Lapouza.</p>
+                  <p>Верхні ноти: Фіалка, Лист Фіалки і Листя Чорної Смородини</p>
+                  <p>Cередні ноти: Зірчатий Аніс, Геліотроп, Дамаська Троянда і Хімонантус
                   </p>
                   <p>
-                    Базові ноти: Ка Ветивер​
+                    Базові ноти: Італійський Ірис, Малина, Мускус, Калабрійський Бергамот і Лабданум
                   </p>
                 </div>
               </div>
@@ -65,21 +65,21 @@
               <div class="row">
                 <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
                   <div class="picture">
-                    <img src="../img/alysonoldoini/black_violet.jpg" />
+                    <img src="../img/alysonoldoini/marine_vodka.jpg" />
                   </div>
                 </div>
                 <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
                   <div class="discription">
-                    <h4>Alysonoldoini Black Violet</h4>
+                    <h4>Alysonoldoini Marine Vodka</h4>
                     <p>
-                      вишуканим запахом — це мистецтво зв’язувати культури за допомогою ароматів.
+                      Marine Vodka від ALYSONOLDOINI - це парфум для чоловіків, належить до групи ароматів Ароматичні Акватичні. Marine Vodka був випущений в 2013.
                     </p>
                     <p>Парфумер: Benoist Lapouza.</p>
-                    <p>Верхні ноти: Фіалка, Лист Фіалки та Лист Чорної Смородини</p>
-                    <p>Cередні ноти: Зірчастий Аніс, Геліотроп, Дамаська Троянда та Хімонант
+                    <p>Верхні ноти: Сицилійський цитрус, Італійська диня і Ананас</p>
+                    <p>Cередні ноти: Горілка, Рожевий Перець, Імбир, Шавлія і Зірчатий Аніс
                     </p>
                     <p>
-                      Базові ноти: Італійський Ірис, Маліна, Мускус, Калабрійський Бергамот та Лабданум
+                      Базові ноти: Мандарин, Індійські Пачулі, Ладан, Мускус і Лабданум
                     </p>
                   </div>
                 </div>
@@ -92,21 +92,75 @@
               <div class="row">
                 <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
                   <div class="picture">
-                    <img src="../img/alysonoldoini/ambra_guiac.jpg" />
+                    <img src="../img/alysonoldoini/oranger_moi.jpg" />
                   </div>
                 </div>
                 <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
                   <div class="discription">
-                    <h4>Alysonoldoini Bourbon Oud</h4>
+                    <h4>Alysonoldoini Oranger Moi</h4>
                     <p>
-                      вишуканим запахом — це мистецтво зв’язувати культури за допомогою ароматів.
+                      Oranger Moi від ALYSONOLDOINI - це парфум для жінок, належить до групи ароматів Східні Квіткові. Oranger Moi був випущений в 2013.
                     </p>
-                    <p>Парфумер: Christian Carbonnel</p>
-                    <p>Верхні ноти: Фіалка, Лист Фіалки та Лист Чорної Смородини</p>
-                    <p>Cередні ноти: Зірчастий Аніс, Геліотроп, Дамаська Троянда та Хімонант
+                    <p>Парфумер: Benoist Lapouza.</p>
+                    <p>Верхні ноти: Мандарин, Імбир, Сицилійський Бергамот і Листя Чорної Смородини</p>
+                    <p>Cередні ноти: Апельсиновий Цвіт, Нарцис, Гвоздика і Кориця
                     </p>
                     <p>
-                      Базові ноти: Італійський Ірис, Маліна, Мускус, Калабрійський Бергамот та Лабданум
+                      Базові ноти: Мускус, Сандал, Боби Тонка і Ваніль
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </section>
+
+          <section class="block">
+            <div class="container">
+              <div class="row">
+                <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
+                  <div class="picture">
+                    <img src="../img/alysonoldoini/crystal_oud.jpg" />
+                  </div>
+                </div>
+                <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
+                  <div class="discription">
+                    <h4>Alysonoldoini Crystal Oud</h4>
+                    <p>
+                      Crystal Oud від ALYSONOLDOINI - це парфум для чоловіків, належить до групи ароматів Деревні Ароматичні. Crystal Oud був випущений в 2014.
+                    </p>
+                    <p>Парфумер: Benoist Lapouza.</p>
+                    <p>Верхні ноти: Лимон і Ревінь</p>
+                    <p>Cередні ноти: Перець, Трюфель і Мак
+                    </p>
+                    <p>
+                      Базові ноти: Ветивер, Дерево Агар (Уд), Кипарис, Дубовий Мох, Ладан, Кедр, Пачулі, Бензоїн і Мускус
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </section>
+
+          <section class="block">
+            <div class="container">
+              <div class="row">
+                <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
+                  <div class="picture">
+                    <img src="../img/alysonoldoini/diafana_skin.jpg" />
+                  </div>
+                </div>
+                <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
+                  <div class="discription">
+                    <h4>Alysonoldoini Diafana Skin</h4>
+                    <p>
+                      Diafana Skin від ALYSONOLDOINI - це парфум для жінок, належить до групи ароматів Квіткові Деревні Мускусні. Diafana Skin був випущений в 2016
+                    </p>
+                    <p>Парфумер: Annelise Heberard і Joelle Lerioux Patris.</p>
+                    <p>Верхні ноти: Цвіт Мигдалю, Мімоза, Альдегіди, Гранат, Ромашка і Алое Вера</p>
+                    <p>Cередні ноти: Ірис, Тубероза, Канабіс, Болгарська Троянда, Жасмин Самбак, Маракуйя і Червоний Мак
+                    </p>
+                    <p>
+                      Базові ноти: Орхідея, Амбра, Мирро, Шкіра, Мускус, Кокос, Ваніль, Шафран, Дерево Агар (Уд), Олія Моної і Ладан
                     </p>
                   </div>
                 </div>
@@ -124,22 +178,150 @@
                 </div>
                 <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
                   <div class="discription">
-                    <h4>Alysonoldoini Bourbon Oud</h4>
+                    <h4>Alysonoldoini Chocman Mint</h4>
                     <p>
-                      вишуканим запахом — це мистецтво зв’язувати культури за допомогою ароматів.
-                    </p>
-                    <p>Парфумер: </p>
-                    <p>Верхні ноти: Фіалка, Лист Фіалки та Лист Чорної Смородини</p>
-                    <p>Cередні ноти: Зірчастий Аніс, Геліотроп, Дамаська Троянда та Хімонант
+                      Chocman Mint від ALYSONOLDOINI - це парфум для чоловіків, належить до групи ароматів Східні Ванільні. Chocman Mint був випущений в 2014.                    </p>
+                    <p>Парфумер: Annelise Heberard і Joelle Lerioux Patris.</p>
+                    <p>Верхні ноти: Лаванда, М'ята, екзотичні Фрукти, Грейпфрут, Герань і Бергамот</p>
+                    <p>Cередні ноти: Темний Шоколад і Кава
                     </p>
                     <p>
-                      Базові ноти: Італійський Ірис, Маліна, Мускус, Калабрійський Бергамот та Лабданум
+                      Базові ноти: Ваніль, Пачулі, Бензоїн, Боби Тонка і Мускус
                     </p>
                   </div>
                 </div>
               </div>
             </div>
           </section>
-    
+
+          <section class="block">
+            <div class="container">
+              <div class="row">
+                <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
+                  <div class="picture">
+                    <img src="../img/alysonoldoini/rhum_dhiver.jpg" />
+                  </div>
+                </div>
+                <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
+                  <div class="discription">
+                    <h4>Alysonoldoini Rhum d'Hiver</h4>
+                    <p>
+                      Rhum d'Hiver від ALYSONOLDOINI - це парфум для чоловіків, належить до групи ароматів Деревні Пряні. Rhum d'Hiver був випущений в 2013.                    
+                      <p>Парфумер: Benoist Lapouza.</p>
+                    <p>Верхні ноти: Ром, Сицилійський Лимон, Кумкват і Калабрійський Бергамот</p>
+                    <p>Cередні ноти: Кардамон і Мускатний Горіх
+                    </p>
+                    <p>
+                      Базові ноти: Ветивер, Сицилійський цитрус, Амбра і Боби Тонка
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </section>
+
+          <section class="block">
+            <div class="container">
+              <div class="row">
+                <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
+                  <div class="picture">
+                    <img src="../img/alysonoldoini/rose_profond.jpg" />
+                  </div>
+                </div>
+                <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
+                  <div class="discription">
+                    <h4>Alysonoldoini Rose Profond</h4>
+                    <p>
+                      Rose Profond від ALYSONOLDOINI - це парфум для жінок, належить до групи ароматів Квіткові. Rose Profond був випущений в 2013.                     
+                    <p>Парфумер: Benoist Lapouza.</p>
+                    <p>Верхні ноти: Гальбанум, Фрезія і Сицилійський Мандарин</p>
+                    <p>Cередні ноти: Турецька Троянда, Італійський Ірис і Шипшина
+                    </p>
+                    <p>
+                      Базові ноти: Мускус, Слива Мірабель, Боби Тонка і Кедр
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </section>
+
+          <section class="block">
+            <div class="container">
+              <div class="row">
+                <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
+                  <div class="picture">
+                    <img src="../img/alysonoldoini/cuir_dences.jpg" />
+                  </div>
+                </div>
+                <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
+                  <div class="discription">
+                    <h4>Alysonoldoini Cuir d'Encens</h4>
+                    <p>
+                      Cuir d'Encens від ALYSONOLDOINI - це парфум для чоловіків, належить до групи ароматів Східні Деревні. Cuir d'Encens був випущений в 2013.                    
+                      <p>Парфумер: Benoist Lapouza.</p>
+                    <p>Верхні ноти: Сицилійський Бергамот, Калабрійський Бергамот, Мандарин і Рожевий Перець</p>
+                    <p>Cередні ноти: Кориця, Мед, Мускатний Горіх, Російська Шкіра, Кардамон і Кумин
+                    </p>
+                    <p>
+                      Базові ноти: Боби Тонка, Дерево Агар (Уд), Ваніль, Амбра, Мох і Пачулі
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </section>
+
+          <section class="block">
+            <div class="container">
+              <div class="row">
+                <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
+                  <div class="picture">
+                    <img src="../img/alysonoldoini/universal.jpg" />
+                  </div>
+                </div>
+                <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
+                  <div class="discription">
+                    <h4>Alysonoldoini Bucato Royale</h4>
+                    <p>
+                      Яскраві ноти лимона та груші поєднуються з м'ятою, підкреслюючи свіжість аромату. Невідредагована ольфактивна нота переосмислює новий «Bucato Italiano».
+                    <p>Парфумер: Benoist Lapouza.</p>
+                    <p>Верхні ноти: Лимон, Груша, Альдегіди</p>
+                    <p>Cередні ноти: Апельсиновий цвіт, М'ята, Гвоздика
+                    </p>
+                    <p>
+                      Базові ноти: Амбра, Мускус, Ветивер
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </section>
+
+          <section class="block">
+            <div class="container">
+              <div class="row">
+                <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
+                  <div class="picture">
+                    <img src="../img/alysonoldoini/universal.jpg" />
+                  </div>
+                </div>
+                <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
+                  <div class="discription">
+                    <h4>Alysonoldoini Marsiglia Musk</h4>
+                    <p>
+                      Композиція аромату включає ноти: Flowey і Amber. Присвячується тим, хто любить носити білу сорочку.
+                      <p>Парфумер: Benoist Lapouza.</p>
+                    <p>Верхні ноти: Лимон, Маракуйя, Геліотроп</p>
+                    <p>Cередні ноти: Кумин, Квіткові ноти
+                    </p>
+                    <p>
+                      Базові ноти: Ваніль та Мускус
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </section>
 </body>
 </html>
