--- a/brands.html
+++ b/brands.html
@@ -41,6 +41,7 @@
             </div>
             <div class="container">
             <div class="row">
+              
               <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12">
                 <a href="brands/shauran.html"
                   ><img src="img/shauran/photo_2023-02-06 14.20.32.jpg" alt=""
@@ -56,6 +57,7 @@
                   ><img src="img/vertus/vertus.jpg" alt=""
                 /></a>
               </div>
+            
           </div>
           </div>
 
@@ -63,7 +65,7 @@
             <div class="row">
               <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12">
                 <a href="brands/milano_fregranze.html"
-                  ><img src="img/milano_fragranze/logo.jpg" alt=""
+                  ><img src="img/milano_fragranze/mialno_logo.jpg" alt=""
                 /></a>
               </div>
               <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12">
@@ -81,7 +83,12 @@
 
           <div class="container">
             <div class="row">
-              <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
+              <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
+                <a href="brands/alysonoldoini.html"
+                  ><img src="img/alysonoldoini/logo.jpg" alt=""
+                /></a>
+              </div>
+              <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
                 <a href="brands/carthusia.html"
                   ><img src="img/carthusia/logo.jpg" alt=""
                 /></a>
