--- a/brands.html
+++ b/brands.html
@@ -83,12 +83,17 @@
 
           <div class="container">
             <div class="row">
-              <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
+              <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12">
                 <a href="brands/alysonoldoini.html"
                   ><img src="img/alysonoldoini/logo.jpg" alt=""
                 /></a>
               </div>
-              <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
+              <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12">
+                <a href="brands/pdr.html"
+                  ><img src="img/pdr/logo.jpg" alt=""
+                /></a>
+              </div>
+              <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12">
                 <a href="brands/carthusia.html"
                   ><img src="img/carthusia/logo.jpg" alt=""
                 /></a>
